--- a/package.json
+++ b/package.json
@@ -3,13 +3,41 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@mui/icons-material": "^5.2.0",
+    "@mui/lab": "^5.0.0-alpha.59",
+    "@mui/material": "^5.2.2",
+    "@mui/styled-engine-sc": "^5.1.0",
+    "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "axios": "^0.24.0",
+    "firebase": "^9.6.1",
+    "jalali-date": "^1.1.4",
+    "millify": "^4.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-masonry-css": "^1.0.16",
+    "react-multi-carousel": "^2.6.5",
+    "react-query": "^3.34.0",
+    "react-redux": "^7.2.6",
+    "react-responsive-carousel": "^3.2.22",
+    "react-router-dom": "^6.1.1",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
+    "react-slick": "^0.28.1",
+    "react-table": "^7.7.0",
+    "react-toastify": "^8.1.0",
+    "redux": "^4.1.2",
+    "shamsi-date-converter": "^1.0.5",
+    "slick-carousel": "^1.8.1",
+    "styled-components": "^5.3.3",
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
